# global-news-sentiment

./: .coveragec  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
config/: api_config.py  env_config.py  etl_config.py  storage_config.py  types.py
data/raw/: sources.csv
data/raw/backups/: articles_combined_291125.csv  articles_combined_301125.csv  sources.csv  sources_291125.csv
docs/: user-requirements.md
scripts/: run_etl.py
src/analyse/: analyse.py  streamlit_app.py
src/extract/: extract.py  extract_articles.py  extract_sources.py
src/load/: load.py
src/transform/: clean_articles.py  clean_sources.py  enrich_sources_articles.py  filter_articles.py  merge_sources_articles.py  normalise_articles.py  transform.py
src/utils/: api_utils.py  date_utils.py  file_utils.py  panda_untils.py
tests/: run_tests.py
tests/unit_tests/: test_extract_articles.py  test_extract_sources.py
